# distributing_client

./: .gitignore  Cargo.toml  README.md  TangleTunes.toml  build.rs  database.sqlite
.github/workflows/: continous_deployment.yml  continuous_deployment.yml  release.yml
abi/: abi.json
src/: account.rs  args.rs  arguments.rs  chunks.rs  config.rs  contract.rs  distribute.rs  distribution.rs  download.rs  iota.rs  listen.rs  main.rs  music_folder.rs  song_index.rs  songs.rs  state.rs  wallet.rs
src/command/: account.rs  mod.rs  song_index.rs  songs.rs  wallet.rs
src/command/distribute/: background_tasks.rs  distribution.rs  mod.rs  register.rs  song_registration.rs
src/distribute/: background.rs  mod.rs  register.rs
src/lib/: abi.rs  app.rs  client.rs  crypto.rs  mod.rs
src/songs/: download.rs  mod.rs
test/: TangleTunes.toml  database  my_account.secret
