[package]
name = "mss-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "1.0.2"
ethers-providers = "1.0.2"

tokio = { version = "1", features = ["full"] }
futures = "0.3"

once_cell = "1.17.0"
clap = { version = "4.1.4", features = ["derive"] }
serde_json = "1.0.93"

eyre = "0.6.8"
color-eyre = "0.6.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
hex = "0.4.3"
tokio-rustls = "0.23.4"
