[package]
name = "tangle-tunes-distributor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Crypto
ethers = "2.0"
ethers-providers = "2.0"
ethers-core = "2.0"
magic-crypt = "3.1.12"

# Async rust
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.23.4"
futures = "0.3"
once_cell = "1.17.0"

# Error handling
eyre = "0.6.8"
color-eyre = "0.6.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

# Config
clap = { version = "4.1.4", features = ["derive"] }
toml = "0.7.2"
serde = { version = "1.0.152", features = ["derive"] }

# Database
sqlx = { version = "0.6.2", features = [ "runtime-tokio-rustls" , "sqlite" ] }
itertools = "0.10.5"
num-integer = "0.1.45"
tokio-util = { version = "0.7.7", features = ["codec"] }
bytes = "1.4.0"
ctrlc = { version = "3.2.5", features = [] }

[build-dependencies]
ethers = "2.0"
