[package]
name = "tangle-tunes-distributor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Crypto
ethers = "2.0"
ethers-providers = "2.0"
ethers-core = "2.0"
magic-crypt = "3.1.12"

# Async rust
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.23.4"
futures = "0.3"
once_cell = "1.17.0"

# Error handling
eyre = "0.6.8"
color-eyre = "0.6.2"

# Config
clap = { version = "4.1.4", features = ["derive"] }
toml = "0.7.2"
serde = { version = "1.0.152", features = ["derive"] }

# Database
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
itertools = "0.10.5"
num-integer = "0.1.45"
tokio-util = { version = "0.7.7", features = ["codec"] }
bytes = "1.4.0"
ctrlc = "3.2.5"
async-trait = "0.1.66"
thiserror = "1.0.39"
chrono = "0.4.24"
rand = "0.8.5"
hyper = { version = "0.14.25", features = ["http1"] }

[build-dependencies]
ethers = "2.0"
